[project]
name = "aws-cfn-health-checker"
version = "0.1.0"
description = "Check the status and drift of AWS CloudFormation stack"
authors = [
    {name = "perfide",email = "perfide+github@zaubberer.net"},
]
license = {text = "GPL-2.0-only"}
readme = "README.md"
requires-python = ">=3.6"
dependencies = [
    "boto3>=1.9",
]


[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[[tool.pdm.source]]
name = "pypi"
url = "https://pypi.org/simple"
verify_ssl = true

[dependency-groups]
dev = []
